--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2
+      with:
+        submodules: recursive
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -21,12 +23,15 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pelican ghp-import markdown
+        pip install -r requirement.txt
 
     - name: Build Pelican Site
-      run: pelican content
+      run: pelican content -s pelica
 
     - name: Deploy to GitHub Pages
-      run: |
-        ghp-import docs -b gh-pages
-        git push -f https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs  # Pelican 输出目录
+        publish_branch: gh-pages  # 明确指定目标分支
+        force_orphan: true  # 强制清空 gh-pages 分支历史（仅保留最新内容）
