--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         pip install -r requirement.txt
 
     - name: Build Pelican Site
-      run: pelican content -s pelica
+      run: pelican content -s pelicanconf.py
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
